syntax = "proto3";

package graviton;

message StartUpload {
  string upload_id = 1;
  uint64 total_size = 2;
  map<string, string> attributes = 3;
}

message UploadChunk {
  bytes payload = 1;
  uint64 offset = 2;
}

message CompleteUpload {
  bytes expected_hash = 1;
}

message UploadAck {
  string upload_id = 1;
  uint64 received_bytes = 2;
}

message UploadMessage {
  oneof value {
    StartUpload start = 1;
    UploadChunk chunk = 2;
    CompleteUpload complete = 3;
    UploadAck ack = 4;
  }
}

service UploadService {
  rpc Upload(stream UploadMessage) returns (stream UploadAck);
}
